# pipeforge

./: .gitignore  CHANGELOG.md  DECISIONS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
dags/: pipeforge_elt_dag.py
data/raw/: online_retail.csv
docker/: airflow.Dockerfile
docker/grafana/dashboards/: pipeforge_sales.json
docker/grafana/provisioning/dashboards/: pipeforge.yml
docker/grafana/provisioning/datasources/: pipeforge.yml
docker/postgres/: init-pipeforge.sql
docs/: index.html
pipeforge/: __init__.py  cli.py  config.py  generate_dataset.py
pipeforge/checks/: __init__.py  core.py  quality.py
pipeforge/export/: __init__.py  databricks_export.py  html_explorer.py  snowflake_export.py
pipeforge/pipeline/: __init__.py  extract.py  load.py  observability.py  run.py
pipeforge/schema/: __init__.py  star.py  warehouse.py
sql/: example_queries.sql
tests/: conftest.py  test_checks.py  test_cli.py  test_export.py  test_extract.py  test_generate.py  test_html_explorer.py  test_load_modes.py  test_pipeline.py  test_reconciliation.py  test_schema_contract.py  test_transform.py
